ecdf init established

--- a/ECDF.ipynb
+++ b/ECDF.ipynb
@@ -9,6 +9,27 @@
     "import pandas as pd\n",
     "metabric = pd.read_csv('metabric.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ECDF:\n",
+    "    def __init__(self,x) -> None:\n",
+    "            self.Z = np.sort(x.unique()) # Extract and sort unique values for x\n",
+    "            compare = x.to_numpy().reshape(-1,1) <= Z.reshape(1,-1) # Compare x and Z values\n",
+    "            self.ecdf = np.mean(compare,axis=0)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
